RMI Chat - fin - reste à tester avec un hostname