@@ -1,3 +1,3 @@
 #!/bin/bash
 
-rmiregistry -J-Djava.rmi.server.codebase=file:/home/erwan/Cours/m1/ipr/tp2/bin/ -J-Djava.security.policy=/home/erwan/Cours/m1/ipr/tp2/src/chat.policy
+rmiregistry -J-Djava.rmi.server.useCodebaseOnly=false -J-Djava.security.manager -J-Djava.security.policy=/home/erwan/Cours/m1/ipr/tp2/src/chat.policy
